--- a/Programming/MVVMDemo/MVVMDemo/Views/StudentView.xaml
+++ b/Programming/MVVMDemo/MVVMDemo/Views/StudentView.xaml
@@ -1,36 +1,33 @@
-﻿<UserControl x:Class = "MVVMDemo.Views.StudentView" 
+﻿<UserControl x:Class="MVVMDemo.Views.StudentView" 
    xmlns = "http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
    xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml" 
    xmlns:mc = "http://schemas.openxmlformats.org/markup-compatibility/2006" 
    xmlns:d = "http://schemas.microsoft.com/expression/blend/2008" 
    xmlns:local = "clr-namespace:MVVMDemo.Views" 
-   mc:Ignorable = "d" 
-   d:DesignHeight = "300" d:DesignWidth = "300">
+   xmlns:viewModel = "clr-namespace:MVVMDemo.ViewModel" 
+   xmlns:data = "clr-namespace:MVVMDemo.Model" 
+   mc:Ignorable = "d" d:DesignHeight = "300" d:DesignWidth = "300">
+
+    <UserControl.Resources>
+        <DataTemplate DataType = "{x:Type data:Student}">
+
+            <StackPanel Orientation = "Horizontal">
+                <TextBox Text = "{Binding Path = FirstName, Mode = TwoWay}" 
+               Width = "100" Margin = "3 5 3 5"/>
+
+                <TextBox Text = "{Binding Path = LastName, Mode = TwoWay}" 
+               Width = "100" Margin = "0 5 3 5"/>
+
+                <TextBlock Text = "{Binding Path = FullName, Mode = OneWay}" 
+               Margin = "0 5 3 5"/>
+
+            </StackPanel>
+
+        </DataTemplate>
+    </UserControl.Resources>
 
     <Grid>
-        <StackPanel HorizontalAlignment = "Left">
-
-            <ItemsControl ItemsSource = "{Binding Path = Students}">
-
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel Orientation = "Horizontal">
-                            <TextBox Text = "{Binding Path = FirstName, Mode = TwoWay}" 
-                        Width = "100" Margin = "3 5 3 5"/>
-
-                            <TextBox Text = "{Binding Path = LastName, Mode = TwoWay}" 
-                        Width = "100" Margin = "0 5 3 5"/>
-
-                            <TextBlock Text = "{Binding Path = FullName, Mode = OneWay}" 
-                        Margin = "0 5 3 5"/>
-
-                        </StackPanel>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-
-            </ItemsControl>
-
-        </StackPanel>
+        <ListBox ItemsSource = "{Binding Students}"/>
     </Grid>
 
 </UserControl>
